<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    tools:context=".ui.CompressionFragment">

    <TextView
        android:id="@+id/tv_audio_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_dimen"
        android:text="@string/audio_file"
        android:theme="@style/TextAppearanceHeadline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_file_path"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_audio_file">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_file_path"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:inputType="none"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_choose_file"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:fontFamily="@font/proza_libre"
        android:text="@string/choose_file"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="@+id/input_layout_file_path"
        app:layout_constraintEnd_toEndOf="@+id/input_layout_file_path"
        app:layout_constraintTop_toTopOf="@+id/input_layout_file_path"
        app:rippleColor="@color/colorAccent" />

    <TextView
        android:id="@+id/tv_audio_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/input_layout_file_path"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_file_path"
        tools:text="12812391283 mb" />

    <TextView
        android:id="@+id/tv_method_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/select_method"
        android:theme="@style/TextAppearanceHeadline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout_file_path" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:chipSpacingHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_method_label"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_elias_method"
            style="@style/CustomChoiceChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elias_delta_code" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChoiceChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boldi_vigna" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_process"
        style="@style/CustomExtendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/process"
        app:icon="@drawable/ic_process"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group_method" />


    <LinearLayout
        android:id="@+id/result_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:clipToPadding="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_process">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:theme="@style/TextAppearanceHeadline" />

        <TextView
            android:id="@+id/tv_result_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/size_result" />

        <TextView
            android:id="@+id/tv_running_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/running_time_result" />

        <TextView
            android:id="@+id/tv_rc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/rc_result" />

        <TextView
            android:id="@+id/tv_cr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/cr_result" />

        <TextView
            android:id="@+id/tv_ss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/ss_result" />

        <TextView
            android:id="@+id/tv_br"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/br_result" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_save_file"
            style="@style/CustomExtendedFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="32dp"
            android:text="@string/save_result"
            app:icon="@drawable/ic_save_file"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chip_group_method" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>